SERVER-59701 Avoid filtering out `Etc` timezone files when reading system tzfiles

(cherry picked from commit 22fa3b7067bc0d9d025dc9191fd42ca509fc879f)